# AgentGuard

./: .gitignore  README.md  RoadMap.md  agent项目学习路径.md  pyproject.toml  report.html  resume_full.tex
attacks/: __init__.py  agent_runner.py
attacks/mcp_server/: __init__.py  malicious_server.py  shadow_server.py  sleeper_server.py
benchmarks/: run_all.py
benchmarks/adversarial/: __init__.py  runner.py  samples.py
benchmarks/agentdojo/: data.py  runner.py
benchmarks/common/: metrics.py
benchmarks/injecagent/: data.py  indirect_detection.py  real_data.py  real_runner.py  runner.py
configs/: guard_config.yaml
demo/: output_guard_demo.py  thought_guard_demo.py
demo/email_agent/: email_store.py  run_demo.py  tool_guard_demo.py
demo/mcp_agent/: run_demo.py
demo/rag_agent/: run_demo.py
guardrails/: __init__.py  agent_guard.py  base.py  input_guard.py  output_guard.py  thought.py  thought_guard.py  tool_call.py  tool_guard.py
guardrails/checkers/: __init__.py  file_checker.py  mcp_scanner.py  network_checker.py  shell_checker.py  sql_checker.py
integrations/: __init__.py  langgraph_adapter.py
scripts/: generate_report.py  run_demo.bat  run_demo.sh
tests/: test_input_guard.py  test_output_guard.py  test_thought_guard.py  test_tool_guard.py
