[tool.poetry]
name = "agent-guard"
version = "0.5.0"
description = "轻量级、可插拔的 LLM Agent 安全围栏中间件"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "guardrails", from = "."}]
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.0"
pyyaml = "^6.0.1"

# LLM 框架集成
langchain = "^0.3.0"
langchain-core = "^0.3.0"
langgraph = "^0.2.0"

# 分类器与模型（可选，按需安装）
# transformers = "^4.40"
# torch = "^2.0"

# 工具
structlog = "^24.0"
click = "^8.1"

# SQL 解析（AST 注入检测）
sqlparse = "^0.5"

# 可选：语义检测（Embedding 相似度）
sentence-transformers = {version = "^3.0", optional = true}
scikit-learn = {version = "^1.5", optional = true}

# MCP 攻击复现
mcp = "^1.0"
fastmcp = "^0.2"
openai = "^1.0"

[tool.poetry.extras]
semantic = ["sentence-transformers", "scikit-learn"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"
pytest-asyncio = "^0.23"
ruff = "^0.5"
mypy = "^1.10"

[tool.poetry.group.benchmarks.dependencies]
datasets = "^2.0"

[tool.poetry.group.attacks.dependencies]
mcp = "^1.0"
fastmcp = "^0.2"
openai = "^1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ============ 工具配置 ============

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = ["datasets", "benchmarks/data"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

# 第三方库没有类型标注时的忽略规则
[[tool.mypy.overrides]]
module = [
    "langchain.*",
    "langchain_core.*",
    "langgraph.*",
    "mcp.*",
    "fastmcp.*",
    "openai.*",
    "sqlparse.*",
    "sentence_transformers.*",
    "sklearn.*",
]
ignore_missing_imports = true
